content part added

--- a/index.html
+++ b/index.html
@@ -22,12 +22,104 @@
             </header>
         </div>
 
-        <div id="d">
-
+        <div class="layout">
+            <div class="two-columns">
+                <div>
+                    <h2>Light, Fast & Powerful</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                    </p>
+                    <p>
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                    <div class="two-columns small">
+                        <div>
+                            <img 
+                                src="./assets/images/icon.svg" 
+                                alt="icon" 
+                                width="36px" 
+                                height="36px"
+                            />
+                            <h3>Title Goes Here</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
+                            </p>
+                        </div>
+                        <div>
+                            <img 
+                                src="./assets/images/icon.svg" 
+                                alt="icon" 
+                                width="36px" 
+                                height="36px"
+                            />
+                            <h3>Title Goes Here</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <img 
+                    src="./assets/images/content_1.svg" 
+                    alt="content_1"
+                    width="540px"
+                    height="524px"
+                />
+            </div>
+            <div class="two-columns lesser-images">
+                <img 
+                    src="./assets/images/content_2.svg" 
+                    alt="content_2"
+                    width="480px"
+                    height="316px"
+                />
+                <div>
+                    <h2>Light, Fast & Powerful</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                    </p>
+                    <p>
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                </div>
+                <img 
+                    src="./assets/images/content_3.svg" 
+                    alt="content_3"
+                    width="540px"
+                    height="387px"
+                />
+                <div>
+                    <h2>Light, Fast & Powerful</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                    </p>
+                    <p>
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                </div>
+                <img 
+                    src="./assets/images/content_4.svg" 
+                    alt="content_4"
+                    width="445px"
+                    height="312px"
+                />
+                <div>
+                    <h2>Light, Fast & Powerful</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                    </p>
+                    <p>
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                    </p>
+                    <button>Purchase Now</button>
+                </div>
+            </div>
         </div>
-        <div class="price-section">
+        <div class="price-section layout">
             <h2>A Price To Suit Everyone</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+            </p>
             <p class="price">$40</p>
             <p class="UI-design-kit">UI Design Kit</p>
             <p class="see-one-price">See, One price. Simple.</p>
