title block done and social media icons added

--- a/index.html
+++ b/index.html
@@ -5,23 +5,38 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        
-        <div id="introduction" class="layout">
-            <header>
-                <div class="top-panel">
-                    <div class="left-flex">
-                        <span>Home</span>
-                        <span>About</span>
-                        <span>Contact</span>
+        <div class="introduction">
+            <div class="layout">
+                <header>
+                    <div class="top-panel">
+                        <div class="left-flex">
+                            <span>Home</span>
+                            <span>About</span>
+                            <span>Contact</span>
+                        </div>
+                        <span class="logo">Landie</span>
+                        <div class="right-flex">
+                            <button>Buy Now</button>
+                        </div>
                     </div>
-                    <span class="logo">Landie</span>
-                    <div class="right-flex">
-                        <button>Buy Now</button>
+                </header>
+                <div class="two-columns">
+                    <div>
+                        <h1>Introduce Your Product Quickly & Effectively</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        </p>
+                        <p>
+                            mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        </p>
+                        <div class="button-flex">
+                            <button>Purchase UI Kit</button>
+                            <button class="light">Learn More</button>
+                        </div>
                     </div>
                 </div>
-            </header>
+            </div>
         </div>
-
         <div class="layout">
             <div class="two-columns">
                 <div>
@@ -143,11 +158,46 @@
                     <span>Contact</span>
                 </div>
                 <div class="right-flex">
-                    <span>f</span>
-                    <span>f</span>
-                    <span>f</span>
-                    <span>f</span>
-                    <span>f</span>
+                    <a href=#>
+                        <img 
+                        src="./assets/images/Instagram_icon.svg" 
+                        alt="facebook_icon"
+                        height="16px"
+                        width="16px"
+                    />
+                    </a>
+                    <a href=#>
+                        <img 
+                        src="./assets/images/Youtube_icon.svg" 
+                        alt="facebook_icon"
+                        height="16px"
+                        width="16px"
+                    />
+                    </a>
+                    <a href=#>
+                        <img 
+                        src="./assets/images/twitter_icon.svg" 
+                        alt="facebook_icon"
+                        height="16px"
+                        width="16px"
+                    />
+                    </a>
+                    <a href=#>
+                        <img 
+                        src="./assets/images/linkedin_icon.svg" 
+                        alt="facebook_icon"
+                        height="16px"
+                        width="16px"
+                    />
+                    </a>
+                    <a href=#>
+                        <img 
+                        src="./assets/images/facebook_icon.svg" 
+                        alt="facebook_icon"
+                        height="16px"
+                        width="16px"
+                    />
+                    </a>
                 </div>
             </div>
         </footer>
