Button animations and links added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
                 <header>
                     <div class="top-panel">
                         <div class="left-flex">
-                            <span>Home</span>
-                            <span>About</span>
-                            <span>Contact</span>
+                            <a href=#>Home</a>
+                            <a href=#>About</a>
+                            <a href=#>Contact</a>
                         </div>
                         <span class="logo">Landie</span>
                         <div class="right-flex">
@@ -143,7 +143,7 @@
         <footer class="footer layout">
             <div class="top-panel">
                 <div class="left-flex">
-                    <span class="company-name">©2020 Yourcompany</span>
+                    <a href=# class="company-name">©2020 Yourcompany</a>
                 </div>
                 <span class="logo">Landie</span>
                 <div class="right-flex">
@@ -153,9 +153,9 @@
             <hr>
             <div class="stretched-flex">
                 <div class="left-flex">
-                    <span>Home</span>
-                    <span>About</span>
-                    <span>Contact</span>
+                    <a href=#>Home</a>
+                    <a href=#>About</a>
+                    <a href=#>Contact</a>
                 </div>
                 <div class="right-flex">
                     <a href=#>
